feat : 슬라이드 애니메이션 추가

--- a/pybo/static/css/aos.css
+++ b/pybo/static/css/aos.css
@@ -863,7 +863,8 @@
 
 [data-aos^=fade][data-aos^=fade].aos-animate {
     opacity: 1;
-    transform: translateZ(0)
+    transform: translateZ(0);
+    display: inline;
 }
 
 [data-aos=fade-up] {
