--- a/pybo/templates/main.html
+++ b/pybo/templates/main.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/aos.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/swiper.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+
 
     <script src="{{ url_for('static', filename='js/jquery-1.11.3.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/iscroll.js') }}"></script>
@@ -64,7 +69,109 @@
         <h2 class="sec_tit text_white aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">지도와 블로그에<br>설레는
             여행을 기록하고,<br>기억해보세요 </h2>
     </div>
+    <div class="sec sec04 sec_program03">
+        <div class="sec_inner">
+{#            <div class="text_area">#}
+{#                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">블로그</h2>#}
+{#                <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">#}
+{#                    여행기록을 <br class="mo_block">블로그에 남겨보아요<br>#}
+{#                </p>#}
+{#            </div>#}
 
+            <!-- slider -->
+            <div class="cate_slider_section aos-init aos-animate" data-aos="fade-left" data-aos-duration="1000">
+                <div class="cate_slider_wrap">
+                    <div class="cate_slider swiper swiper-container-initialized swiper-container-horizontal">
+                        <div class="swiper-wrapper"
+                             style="transition-duration: 300ms; transform: translate3d(-4000px, 0px, 0px);">
+                            <div class="slider_item swiper-slide swiper-slide-duplicate swiper-slide-duplicate-active"
+                                 data-swiper-slide-index="2" style="width: 1440px;">
+                                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">1</h2>
+                                <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
+                                    여행기록을 <br class="mo_block">블로그에 남겨보아요<br>
+                                </p>
+                                <div class="slider_radius">
+                                    <img src="{{ url_for('static', filename='image/1.png') }}" alt="slide 3">
+                                </div>
+                            </div>
+                            <div class="slider_item swiper-slide swiper-slide-duplicate-next"
+                                 data-swiper-slide-index="0" style="width: 1440px;">
+                                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">1</h2>
+                                <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
+                                    여행기록을 <br class="mo_block">블로그에 남겨보아요<br>
+                                </p>
+
+                                <div class="slider_radius">
+                                    <img src="{{ url_for('static', filename='image/2.png') }}" alt="slide 1">
+                                </div>
+                            </div>
+                            <div class="slider_item swiper-slide swiper-slide-prev" data-swiper-slide-index="1"
+                                 style="width: 1440px;">
+                                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">2</h2>
+                                <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
+                                    여행기록을 <br class="mo_block">블로그에 남겨보아요<br>
+                                </p>
+                                <div class="slider_radius">
+                                    <img src="{{ url_for('static', filename='image/3.png') }}" alt="slide 2">
+                                </div>
+                            </div>
+                            <div class="slider_item swiper-slide swiper-slide-active" data-swiper-slide-index="2"
+                                 style="width: 1440px;">
+                                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">3</h2>
+                                <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
+                                    여행기록을 <br class="mo_block">블로그에 남겨보아요<br>
+                                </p>
+                                <div class="slider_radius">
+                                    <img src="{{ url_for('static', filename='image/1.png') }}" alt="slide 3">
+                                </div>
+                            </div>
+                            <div class="slider_item swiper-slide swiper-slide-duplicate swiper-slide-next"
+                                 data-swiper-slide-index="0" style="width: 1440px;">
+                                <div class="slider_radius">
+                                    <img src="{{ url_for('static', filename='image/2.png') }}" alt="slide 1">
+                                </div>
+                            </div>
+                        </div>
+                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+                </div>
+                <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"><span
+                        class="swiper-pagination-bullet" tabindex="0" role="button"
+                        aria-label="Go to slide 1"></span><span class="swiper-pagination-bullet" tabindex="0"
+                                                                role="button" aria-label="Go to slide 2"></span><span
+                        class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button"
+                        aria-label="Go to slide 3"></span></div>
+                <div class="swiper-button-prev nav_arrow" tabindex="0" role="button" aria-label="Previous slide"></div>
+                <div class="swiper-button-next nav_arrow" tabindex="0" role="button" aria-label="Next slide"></div>
+            </div>
+            <!--// slider -->
+
+            <div class="cate_tabs aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
+{#                <ul class="block">#}
+{#                    <li>#}
+{#                        <div class="feature1">#}
+{#                            <p>#}
+{#                                여행 블로그에 최적화된 Travel-log#}
+{#                            </p>#}
+{#                        </div>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <div class="feature2">#}
+{#                            <p>#}
+{#                                친구들과 함께 블로그에 여행기록을 작성해보세요#}
+{#                            </p>#}
+{#                        </div>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <div class="feature3">#}
+{#                            <p>#}
+{#                                블로그 특징3#}
+{#                            </p>#}
+{#                        </div>#}
+{#                    </li>#}
+{#                </ul>#}
+            </div>
+        </div>
+    </div>
     <div class="sec sec01 sec_life">
         <div class="bg_image">
             <div class="sec_inner">
