--- a/pybo/static/css/main.css
+++ b/pybo/static/css/main.css
@@ -506,6 +506,7 @@ body.fixed #header .gnb ul li.active a:after {
 }
 h2.sec_tit.aos-init.aos-animate {
     color: black;
+    display: inline;
 }
 .sec_desc {
     margin-top: 42px;
@@ -907,9 +908,9 @@ h2.sec_tit.aos-init.aos-animate {
     margin-bottom: 30px;
 }
 
-/* sec04 보험료를 AI가 알아서 비교 */
+
 .sec_program03 {
-    /*height: 1010px;*/
+    height: 800px;
     background-image: linear-gradient(to bottom, rgba(244, 244, 244, 0.9), rgba(255, 255, 255, 0.9));
 }
 
@@ -961,9 +962,9 @@ h2.sec_tit.aos-init.aos-animate {
 
 .cate_slider_section {
     position: absolute;
-    top: 130px;
-    right: 75px;
-    width: 430px;
+    top: 40px;
+
+    width: 1440px;
     height: 754px;
     z-index: 1;
     padding: 0 90px 0 30px;
@@ -972,9 +973,11 @@ h2.sec_tit.aos-init.aos-animate {
 
 /* .cate_slider_section {position: absolute; top:140px; right:20px; width:480px; height:815px; z-index:1; padding:0 125px 0 45px; background:url('../image/phone-1.png') no-repeat 0 0 / 100% auto;} */
 .cate_slider_section .swiper-pagination {
-    left: 30px;
-    bottom: 45px;
-    width: 310px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 53px;
+    width: 1366px;
 }
 
 .cate_slider_section .nav_arrow {
@@ -989,7 +992,7 @@ h2.sec_tit.aos-init.aos-animate {
 }
 
 .cate_slider_section .swiper-pagination-bullet:not(.swiper-pagination-bullet-active) {
-    background-color: #fff;
+    background-color: #B0B1B3;
 }
 
 .cate_slider_section .swiper-button-prev {
@@ -1009,7 +1012,7 @@ h2.sec_tit.aos-init.aos-animate {
     float: left;
     width: 310px;
     height: 567.5px;
-    margin-top: 86px;
+
 }
 
 .cate_slider .slider_item img {
@@ -2282,7 +2285,7 @@ h2.sec_tit.aos-init.aos-animate {
     }
 
     .sec_program03 .sec_inner {
-        padding: 110px 0 85px;
+        padding: 550px 20px 300px;
     }
 
     .sec_program03 .text_area {
