refactor : 대표 색상 적용

--- a/pybo/static/css/nav.css
+++ b/pybo/static/css/nav.css
@@ -10,7 +10,9 @@
     border-bottom: solid 2px #e1e1e1;
 }
 
-
+i#notifications-icon{
+    color: #3288FF;
+}
 
 #header h1 {
     position: absolute;
