--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/swiper.min.css') }}">
     <title>Travelog</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
-
+    <script src="{{ url_for('static', filename='js/preview.js') }}"></script>
     <!-- 2023-04-25 여기 아래 3줄 일단 주석처리함. 오늘 기준 26번째줄하고 코드가 겹쳐서 일단 요거 주석처리하고 필요한거만 주석 빼면 될듯.-->
     <!--<script src="{{ url_for('static', filename='js/ckeditor 2/ckeditor.js') }}"></script>
     <script src="{{ url_for('static', filename='js/translations/en.js') }}"></script>
