--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<style>
+    .scroll::-webkit-scrollbar {
+        display: none;
+    }
+</style>
 <div id="mainPjax">
     <div class="main story">
         <div id="container">
