--- a/pybo/static/css/index.css
+++ b/pybo/static/css/index.css
@@ -124,7 +124,7 @@ img.image-preview {
 }
 
 .pleaselogin {
-    margin: 300px 0 0 0;
+   margin-top: 180px;
 }
 
 .myprofilearea {
@@ -162,10 +162,12 @@ img.image-preview {
     color: #fff;
 }
 .myprofile {
-    margin: 35px 15px;
+    margin: 70px 15px;
     text-align: center;
 }
-
+h2.myprofile_1 {
+    padding-top: 5%;
+}
 .myprofile p {
     color: gray;
 }
