--- a/pybo/static/css/module.css
+++ b/pybo/static/css/module.css
@@ -25,7 +25,7 @@
 .module-icon {
     width: 60px;
     height: 60px;
-    background-color: #007bff;
+    background-color: #3288FF;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,7 +89,7 @@
 .chatbot-submit {
   width: 70px;
   height: 40px;
-  background-color: #007bff;
+  background-color: #3288FF;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -123,7 +123,7 @@
 .dalle-submit {
     width: 100%;
     height: 40px;
-    background-color: #007bff;
+    background-color: #3288FF;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -152,7 +152,7 @@
     #backBtn {
     width: 100%;
     height: 40px;
-    background-color: #007bff;
+    background-color: #3288FF;
     color: #fff;
     border: none;
     border-radius: 4px;
