--- a/pybo/static/css/main.css
+++ b/pybo/static/css/main.css
@@ -1,4 +1,12 @@
 @charset "utf-8";
+/*리스트 추가*/
+.changethis{
+    float: left;
+    margin-left: 2%;
+}
+::marker{
+    color: #3288FF;
+}
 @font-face {
     font-family: 'NotoSansKR';
     font-style: normal;
@@ -102,10 +110,12 @@ iframe {
     border: 0 none;
 }
 
-li {
-    list-style: none;
-}
 
+.slider_item swiper-slide swiper-slide-active .block .list_1{
+    list-style: disc; /* 원형 점 */
+    /* 또는 */
+    list-style: square; /* 사각형 점 */
+}
 input,
 select,
 button {
@@ -348,6 +358,7 @@ textarea {
 #header .gnb ul li {
     float: left;
     margin-right: 90px;
+    list-style: none;
 }
 
 #header .gnb ul li:first-child {
@@ -458,7 +469,7 @@ body.fixed #header .gnb ul li.active a:after {
     display: block;
     width: 100%;
     height: 100%;
-    background: #1f1f1f;
+
     opacity: 0.55;
 }
 
@@ -947,7 +958,7 @@ h2.sec_tit.aos-init.aos-animate {
 }
 
 .sec_program03 .sec_inner {
-    display: block;
+    display: flex;
     padding: 260px 20px 320px;
 }
 
