--- a/pybo/static/css/nav.css
+++ b/pybo/static/css/nav.css
@@ -5,6 +5,7 @@
     left: 0;
     top: 0;
     width: 100%;
+    height: 100px;
     z-index: 50;
     background-color: white;
     border-bottom: solid 2px #e1e1e1;
@@ -38,12 +39,14 @@ i#notifications-icon{
     padding: 0 15px;
     margin: 0 auto;
 }
-
-#header .gnb {
-    float: right;
-    padding: 25px 0;
-    padding-top: 55px;
+.gnb {
+    margin-top: 101px;
 }
+    /*#header .gnb {*/
+    /*    float: right;*/
+    /*    padding: 25px 0;*/
+    /*    padding-top: 55px;*/
+    /*}*/
 
 #header .gnb ul:after {
     content: '';
@@ -51,24 +54,25 @@ i#notifications-icon{
     clear: both;
 }
 
-#header .gnb ul li {
-    float: left;
-    margin-right: 90px;
-}
+/*#header .gnb ul li {*/
+/*    display: inline-block;*/
+/*    margin-right: 90px;*/
+/*}*/
 
-#header .gnb ul li:first-child {
-    margin-left: 70px;
-}
+/*#header .gnb ul li:first-child {*/
+/*    margin-left: 70px;*/
+/*}*/
 #header .gnb .nav-item dropdown nav-link1{
     color : black;
 }
 #header .gnb ul li a {
-    position: relative;
+    display: block;
     color: #c8c8c8;
     font-size: 20px;
     line-height: 30px;
     text-decoration: none;
     font-weight: 900;
+    margin-left: 5%;
 }
 #header .gnb ul li b{
     color: blue;
