--- a/pybo/templates/friends/find_friends.html
+++ b/pybo/templates/friends/find_friends.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/nav.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bar.css')}}">
     <script src="{{ url_for('static', filename='js/popup.js') }}"></script>
     <title>Travelog</title>
     <link rel="icon" href="{{url_for('static', filename='image/favicon (2).ico')}}">
@@ -17,31 +18,43 @@
 
 </head>
 <body>
-<header id="header">
-    <div class="inner">
-        <h1><a href="/">Travelog</a></h1>
-        <div class="gnb">
-            {% if g.user %}
-            <ul>
-                <li><a href='/friends/find_friends'>친구찾기</a></li>
-                <li><a href="/question/list">블로그</a></li>
-                <li><a href="/input">나만의 지도</a></li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="{{ url_for('main.logout') }}">{{ g.user.user_name }} 님 (로그아웃)</a>
-                </li>
-            </ul>
-            {% else %}
-            <ul>
-                <li><a href='/friends/find_friends'>친구찾기</a></li>
-                <li><a href="/question/list">블로그</a></li>
-                <li><a href="/input">나만의 지도</a></li>
-                <li><a href="/login">로그인</a></li>
-                <li><a href=/signup>회원가입</a></li>
-            </ul>
-            {% endif %}
-        </div>
-    </div>
-</header>
+
+<div class="han_nav">
+    <nav class="navbar navbar-expand-lg navbar-light hello">
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <header id="header">
+            <a class="menu-trigger" href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+            <div class="inner">
+                <h1><a href="/">Travelog</a></h1>
+                <div class="gnb">
+                    {% if g.user %}
+                    <ul>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{{ url_for('main.logout') }}">{{ g.user.user_name }} 님(로그아웃)</a>
+                        </li>
+                        <li><a href="/question/list">Blog</a></li>
+                        <li><a href="/input">Map</a></li>
+                    </ul>
+                    {% else %}
+                    <ul>
+                        <li><a href="/question/list">블로그</a></li>
+                        <li><a href="/input">나만의 지도</a></li>
+                        <li><a href="/login">Login</a></li>
+                    </ul>
+                    {% endif %}
+                </div>
+            </div>
+        </header>
+    </nav>
+</div>
 <div class="container">
     <h2 class="my-4">친구 찾기</h2>
     <div class="input-group mb-3">
@@ -88,7 +101,7 @@
 {% block script %}
 <style>
     .container {
-        margin-top: 8%;
+        margin-top: 6%;
     }
 </style>
 <script>
@@ -137,7 +150,7 @@
     }
 });
 </script>
-
+<script src="{{ url_for('static', filename='js/bar.js') }}"></script>
 </body>
 </html>
 {% endblock %}
