--- a/pybo/templates/index.html
+++ b/pybo/templates/index.html
@@ -5,163 +5,191 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/nav.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.5.5.0.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bar.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.4.5.0.min.css')}}">
     <script src="{{ url_for('static', filename='js/popup.js') }}"></script>
     <title>Travelog</title>
     <link rel="icon" href="{{url_for('static', filename='image/favicon (2).ico')}}">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
     <!-- 만약 base.html하고 합치게 된다면, 아래 코드를 꼭 넣어야함(marker2에 대한 창 만들어주는 라이브러리 로드임) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+
+
 </head>
 <body>
-    <!-- Header start-->
-    <header id="header">
-        <div class="inner">
-            <h1><a href="/">Travelog</a></h1>
-            <div class="gnb">
-                {% if g.user %}
-                    <ul>
-                        <li><a href='/friends/find_friends'>친구찾기</a></li>
-                        <li><a href="/question/list">블로그</a></li>
-                        <li><a href="/input">나만의 지도</a></li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="{{ url_for('main.logout') }}">{{ g.user.user_name }} 님 (로그아웃)</a>
-                        </li>
-                    </ul>
-                {% else %}
-                    <ul>
-                        <li><a href='/friends/find_friends'>친구찾기</a></li>
-                        <li><a href="/question/list">블로그</a></li>
-                        <li><a href="/input">나만의 지도</a></li>
-                        <li><a href="/login">로그인</a></li>
-                        <li><a href=/signup>회원가입</a></li>
-                    </ul>
-                {% endif %}
-            </div>
-        </div>
-    </header>
-    <!-- Header end-->
-    <!-- Section start-->
-    <div id="section">
-        <div class="blank"></div>
-        <!-- Fisrt section-->
-        <div class="myprofilearea">
-            <div class="myprofile">
-                {% if g.user%}
-                <p>프로필</p>
-                <h2 class="username">{{ g.user.user_name}} </h2>
-                <br>
-                <form method="POST" action="{{ url_for('input.upload_file') }}" enctype="multipart/form-data">
-                    <input type="file" id="file" name="file" accept="image/*" style="display: none;" onchange="uploadImage(event)" required>
-                    <img id="profileImg"
-                         src="{{ url_for('static', filename='image/profile/' + g.user.user_id + '/' + g.user.profile_img if g.user.profile_img else 'image/User.png') }}"
-                         style="border-radius: 50%; width: 190px; height: 190px;" />
-                    <button type="button" id="uploadButton" style="background-color: #3288FF; color: white; margin-top: 10px; border-radius: 5px; padding: 10px 20px; border: none; cursor: pointer; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);">대표 사진 변경</button>
-                </form>
+<!-- Header start-->
+<div class="han_nav">
+    <nav class="navbar navbar-expand-lg navbar-light hello">
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <script>
-                    var loadFile = function(event) {
-                        var reader = new FileReader();
-                        reader.onload = function() {
-                            var output = document.getElementById('profileImg');
-                            output.src = reader.result;
-                        };
-                        reader.readAsDataURL(event.target.files[0]);
-                    };
-
-                    var uploadImage = function(event) {
-                        loadFile(event);
-                        // Trigger the form submission
-                        event.target.form.submit();
-                    }
-
-                    document.getElementById('uploadButton').addEventListener('click', function() {
-                        document.getElementById('file').click();
-                    });
-                </script>
-                <h6 class="email">{{ g.user.user_}}</h6>
-                <br>
-                {% if profile_last_exercise %}
-                <br>
-                {% else %}
-
-                <br>
-                {% endif %}
-                <p class="phonenumber"> {{ g.user.phone}}</p>
-                <br><br><br>
-
-                {% else %}
-                <h2 class="myprofile_1">마이 프로필</h2>
-                <p class="pleaselogin">로그인을 해주세요</p>
-                {% endif %}
-            </div>
-        </div>
-        <!-- Second section-->
-        <!-- 아래는 로그인이 되어있을땐, isLoggedIn 변수에 true값이 집어넣어지고, userId를 키값으로 하여, 유저들의 커스텀맵이미지를 index.js에서 정의합니다. -->
-        <div class="filter-section">
-            <input type="radio" id="myMarkers" name="markerFilter" value="myMarkers" checked>
-            <label for="myMarkers">내 게시물</label><br>
-            <input type="radio" id="friendsMarkers" name="markerFilter" value="friendsMarkers">
-            <label for="friendsMarkers">친구 게시물</label><br>
-            <input type="radio" id="allMarkers" name="markerFilter" value="allMarkers">
-            <label for="allMarkers">전체 게시물</label>
-        </div>
-        <div class="secondsection">
-            <div class="mymaparea">
-                <div class="mymap">
-                    <div id="map" style="width:78%;height:600px;"></div>
-                    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=db3ede3d0cad5ad581623d2c7eff2265"></script>
+        <header id="header">
+            <a class="menu-trigger" href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+            <div class="inner">
+                <h1><a href="/">Travelog</a></h1>
+                <div class="gnb">
                     {% if g.user %}
-                    <!-- 로그인이 되어있으면 -->
-
-                        <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">Marker Information</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form id="markerForm">
-                                            <div class="form-group">
-                                                <label for="title">Title</label>
-                                                <input type="text" class="form-control" id="title" placeholder="Enter title">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="content">Content</label>
-                                                <textarea class="form-control" id="content" rows="3"></textarea>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="image">Upload Image</label>
-                                                <input type="file" class="form-control-file" id="image" name="img_name">
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Submit</button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <script>
-                            var isLoggedIn = true;
-                            var userId = "{{ g.user.user_id }}";
-                        </script>
-                        <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+                    <ul>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{{ url_for('main.logout') }}">{{ g.user.user_name }} 님(로그아웃)</a>
+                        </li>
+                        <li><a href='/friends/find_friends'>친구찾기</a></li>
+                        <li><a href="/question/list">Blog</a></li>
+                        <li><a href="/input">Map</a></li>
+                    </ul>
                     {% else %}
-                    <!-- 로그인이 안되어있으면 -->
-                        <script>
-                            var isLoggedIn = false;
-                        </script>
-                        <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+                    <ul>
+                        <li><a href='/friends/find_friends'>친구찾기</a></li>
+                        <li><a href="/question/list">블로그</a></li>
+                        <li><a href="/input">나만의 지도</a></li>
+                        <li><a href="/login">Login</a></li>
+                    </ul>
                     {% endif %}
                 </div>
             </div>
+        </header>
+    </nav>
+</div>
+<script src="{{ url_for('static', filename='js/bar.js') }}"></script>
+<!-- Header end-->
+<!-- Section start-->
+<div id="section">
+    <div class="blank"></div>
+    <!-- Fisrt section-->
+    <div class="myprofilearea">
+        <div class="myprofile">
+            {% if g.user%}
+            <p>프로필</p>
+            <h2 class="username">{{ g.user.user_name}} </h2>
+            <br>
+            <form method="POST" action="{{ url_for('input.upload_file') }}" enctype="multipart/form-data">
+                <input type="file" id="file" name="file" accept="image/*" style="display: none;" onchange="uploadImage(event)" required>
+                <img id="profileImg"
+                     src="{{ url_for('static', filename='image/profile/' + g.user.user_id + '/' + g.user.profile_img if g.user.profile_img else 'image/User.png') }}"
+                     style="border-radius: 50%; width: 190px; height: 190px;" />
+                <button type="button" id="uploadButton" style="background-color: #3288FF; color: white; margin-top: 10px; border-radius: 5px; padding: 10px 20px; border: none; cursor: pointer; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);">프로필 변경</button>
+            </form>
+
+            <script>
+                var loadFile = function(event) {
+                    var reader = new FileReader();
+                    reader.onload = function() {
+                        var output = document.getElementById('profileImg');
+                        output.src = reader.result;
+                    };
+                    reader.readAsDataURL(event.target.files[0]);
+                };
+
+                var uploadImage = function(event) {
+                    loadFile(event);
+                    // Trigger the form submission
+                    event.target.form.submit();
+                }
+
+                document.getElementById('uploadButton').addEventListener('click', function() {
+                    document.getElementById('file').click();
+                });
+            </script>
+            <h6 class="email">{{ g.user.user_}}</h6>
+            <br>
+            {% if profile_last_exercise %}
+            <br>
+            {% else %}
+
+            <br>
+            {% endif %}
+            <p class="phonenumber"> {{ g.user.phone}}<br>핸드폰 번호</p>
+            <br><br><br>
+            {% else %}
+            <h2>마이 프로필</h2>
+            <p class="pleaselogin">로그인을 해주세요</p>
+            {% endif %}
         </div>
-        <!--second section end-->
     </div>
+    <div class="filter-section">
+        <input type="radio" id="myMarkers" name="markerFilter" value="myMarkers" checked>
+        <label for="myMarkers">내 게시물</label><br>
+        <input type="radio" id="friendsMarkers" name="markerFilter" value="friendsMarkers">
+        <label for="friendsMarkers">친구 게시물</label><br>
+        <input type="radio" id="allMarkers" name="markerFilter" value="allMarkers">
+        <label for="allMarkers">전체 게시물</label>
+    </div>
+    <!-- Second section-->
+    <!-- 아래는 로그인이 되어있을땐, isLoggedIn 변수에 true값이 집어넣어지고, userId를 키값으로 하여, 유저들의 커스텀맵이미지를 index.js에서 정의합니다. -->
+    <div class="secondsection">
+        <div class="mymaparea">
+            <div class="mymap">
+                <div id="map" style="width:78%;height:600px;"></div>
+                <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=db3ede3d0cad5ad581623d2c7eff2265"></script>
+                {% if g.user %}
+                <!-- 로그인이 되어있으면 -->
+                <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Marker Information</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="markerForm">
+                                    <div class="form-group">
+                                        <label for="title">Title</label>
+                                        <input type="text" class="form-control" id="title" placeholder="Enter title">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="content">Content</label>
+                                        <textarea class="form-control" id="content" rows="3"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="image">Upload Image</label>
+                                        <input type="file" class="form-control-file" id="image" name="img_name">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class ="secondmodal">
+
+                </div>
+
+                <script>
+                    var isLoggedIn = true;
+                    var userId = "{{ g.user.user_id }}";
+                </script>
+
+                <script src="{{ url_for('static', filename='js/index/index_1fetch.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/index/index_2map.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/index/index_3customoverlay.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/index/index_4displaymarkers.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/index/index_5main.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/index/index_6marker2.js') }}"></script>
+
+                {% else %}
+                <!-- 로그인이 안되어있으면 -->
+                <script>
+                    var isLoggedIn = false;
+                </script>
+                <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    <!--second section end-->
+</div>
 
 </body>
 </html>
