--- a/pybo/templates/main.html
+++ b/pybo/templates/main.html
@@ -30,20 +30,18 @@
         <div class="gnb">
             {% if g.user %}
                 <ul>
-                    <li><a href='/friends/find_friends'>친구찾기</a></li>
-                    <li><a href="/question/list">블로그</a></li>
-                    <li><a href="/input">나만의 지도</a></li>
+                    <li class="nav_li"><a href="/question/list">Blog</a></li>
+                    <li class="nav_li"><a href="/input">Map</a></li>
                     <li class="nav-item ">
                         <a class="nav-link" href="{{ url_for('main.logout') }}">{{ g.user.user_name }} 님 (로그아웃)</a>
                     </li>
                 </ul>
             {% else %}
                 <ul>
-                    <li><a href='/friends/find_friends'>친구찾기</a></li>
-                    <li><a href="/question/list">블로그</a></li>
-                    <li><a href="/input">나만의 지도</a></li>
-                    <li><a href="/login">로그인</a></li>
-                    <li><a href=/signup>회원가입</a></li>
+                    <li class="nav_li"><a href="/question/list">Blog</a></li>
+                    <li class="nav_li"><a href="/input">Map</a></li>
+                    <li class="nav_li"><a href="/login">Login</a></li>
+
                 </ul>
             {% endif %}
         </div>
@@ -85,12 +83,13 @@
                             </div>
                             <div class="slider_item swiper-slide swiper-slide-duplicate-next"
                                  data-swiper-slide-index="0" style="width: 310px;">
+                                <div class="changethis">
                                 <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">블로그</h2>
                                 <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
                                     여행블로그인 트레블로그에  <br class="mo_block">기록을 남겨보세요<br>
                                 </p>
                                 <ul class="block">
-                                    <li>
+                                    <li class="list_1">
                                         <div class="feature1">
                                             <p>
                                                 여행 블로그에 최적화된 Travel-log
@@ -112,72 +111,77 @@
                                         </div>
                                     </li>
                                 </ul>
+                                </div>
                                 <div class="slider_radius">
                                     <img class="slide img" src="{{ url_for('static', filename='image/2.png') }}" alt="slide 1">
                                 </div>
                             </div>
                             <div class="slider_item swiper-slide swiper-slide-prev" data-swiper-slide-index="1"
                                  style="width: 310px;">
+                                <div class="changethis">
                                 <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Map</h2>
                                 <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
                                     지도를 활용해서<br class="mo_block">나만의 지도를 만들어 보세요<br>
                                 </p>
-                                <ul class="block">
-                                    <li>
-                                        <div class="feature1">
-                                            <p>
-                                                여행 블로그에 최적화된 Travel-log
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="feature2">
-                                            <p>
-                                                친구들과 함께 블로그에 여행기록을 작성해보세요
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="feature3">
-                                            <p>
-                                                블로그 특징3
-                                            </p>
-                                        </div>
-                                    </li>
-                                </ul>
+                                    <ul class="block">
+                                        <li class="list_2">
+                                            <div class="feature1">
+                                                <p>
+                                                    여행 블로그에 최적화된 Travel-log
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="feature2">
+                                                <p>
+                                                    친구들과 함께 블로그에 여행기록을 작성해보세요
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="feature3">
+                                                <p>
+                                                    블로그 특징3
+                                                </p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                                 <div class="slider_radius">
                                     <img class="slide img" src="{{ url_for('static', filename='image/3.png') }}" alt="slide 2">
                                 </div>
                             </div>
                             <div class="slider_item swiper-slide swiper-slide-active" data-swiper-slide-index="2"
                                  style="width: 310px;">
+                                <div class="changethis">
                                 <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Chat Gpt</h2>
                                 <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
                                     Chat Gpt를 활용해서<br class="mo_block">인공지능 서비스를 사용해보세요<br>
                                 </p>
-                                <ul class="block">
-                                    <li>
-                                        <div class="feature1">
-                                            <p>
-                                                여행 블로그에 최적화된 Travel-log
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="feature2">
-                                            <p>
-                                                친구들과 함께 블로그에 여행기록을 작성해보세요
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="feature3">
-                                            <p>
-                                                블로그 특징3
-                                            </p>
-                                        </div>
-                                    </li>
-                                </ul>
+                                    <ul class="block">
+                                        <li class="list_3">
+                                            <div class="feature1">
+                                                <p>
+                                                    여행 블로그에 최적화된 Travel-log
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="feature2">
+                                                <p>
+                                                    친구들과 함께 블로그에 여행기록을 작성해보세요
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="feature3">
+                                                <p>
+                                                    블로그 특징3
+                                                </p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                                 <div class="slider_radius">
                                     <img class="slide img" src="{{ url_for('static', filename='image/1.png') }}" alt="slide 3">
                                 </div>
@@ -292,24 +296,24 @@
         </div>
     </div>
 
-    <div class="sec sec03 bg_image sec_program02">
-        <div class="sec_inner">
-            <div class="right_box">
-                <div class="text_area text_white">
-                    <h2 class="sec_tit aos-init" data-aos="fade-up" data-aos-duration="1000">Chat Gpt를 <br>사용한 여행 블로그
-                    </h2>
-                    <p class="sec_desc aos-init" data-aos="fade-up" data-aos-duration="1000">
-                        Travel-log는 Chat Gpt를 이용해서<br>블로그에서 글을 요약해서 알려드립니다
-                    </p>
-                </div>
-            </div>
-            <div class="left_box aos-init" data-aos="fade-right" data-aos-duration="1000">
-                <div class="image_area">
-                    <img src="{{ url_for('static', filename='image/gpt_image.png') }}">
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div class="sec sec03 bg_image sec_program02">-->
+<!--        <div class="sec_inner">-->
+<!--            <div class="right_box">-->
+<!--                <div class="text_area text_white">-->
+<!--                    <h2 class="sec_tit aos-init" data-aos="fade-up" data-aos-duration="1000">Chat Gpt를 <br>사용한 여행 블로그-->
+<!--                    </h2>-->
+<!--                    <p class="sec_desc aos-init" data-aos="fade-up" data-aos-duration="1000">-->
+<!--                        Travel-log는 Chat Gpt를 이용해서<br>블로그에서 글을 요약해서 알려드립니다-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="left_box aos-init" data-aos="fade-right" data-aos-duration="1000">-->
+<!--                <div class="image_area">-->
+<!--                    <img src="{{ url_for('static', filename='image/gpt_image.png') }}">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <div class="sec sec06 sec_case" data-menu-idx="2">
         <div class="sec_inner sec_inner&#45;&#45;1st">
