--- a/pybo/templates/signup.html
+++ b/pybo/templates/signup.html
@@ -15,10 +15,7 @@
 
 <div class="login">
     <div class="login__content">
-        <div class="login__img">
-            <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_ayk6t8xd.json" background="transparent"
-                           speed="1" style="width: 520px; height: 520px;" loop autoplay></lottie-player>
-        </div>
+
         <form method="post" class="login__register" id="login-in">
             {{ form.csrf_token }}
             {% if form.errors %}
@@ -41,44 +38,44 @@
             {% endfor %}
 
             <div class="login__forms">
-                <h1 class="login__title">Sign Up</h1>
+                <h1 class="login__title">회원가입</h1>
                 <div class="login__box" class="login__regist1">
                     <i class='bx bx-user login__icon'></i>
-                    <input type="text" placeholder="Username" class="login__input" name="name" id="name" required=""
+                    <input type="text" placeholder="이름" class="login__input" name="name" id="name" required=""
                            autocomplete="off" ,
                            value="{{ form.name.data or '' }}">
                 </div>
                 <div class="login__box" class="login__regist1">
                     <i class="iconify login__icon" data-icon="fluent-emoji-high-contrast:id-button"></i>
-                    <input type="text" placeholder="Id" class="login__input" name="userid" id="userid" required=""
+                    <input type="text" placeholder="아이디" class="login__input" name="userid" id="userid" required=""
                            autocomplete="off" ,
                            value="{{ form.userid.data or '' }}">
                 </div>
                 <div class="login__box" class="login__regist1">
                     <i class='bx bx-lock login__icon'></i>
-                    <input type="password" placeholder="Password" class="login__input" name="password1" id="password1"
+                    <input type="password" placeholder="비밀번호" class="login__input" name="password1" id="password1"
                            required="" autocomplete="off" ,
                            value="{{ form.password1.data or '' }}">
                 </div>
                 <div class="login__box" class="login__regist1">
                     <i class='bx bx-lock login__icon'></i>
-                    <input type="password" placeholder="Password Validation" class="login__input" name="password2"
+                    <input type="password" placeholder="비밀번호 확인" class="login__input" name="password2"
                            id="password2" required="" autocomplete="off" ,
                            value="{{ form.password2.data or '' }}">
                 </div>
                 <div class="login__box" class="login__regist1">
                     <i class='bx bx-at login__icon'></i>
-                    <input type="text" placeholder="Email" class="login__input" name="email" id="email" required=""
+                    <input type="text" placeholder="이메일" class="login__input" name="email" id="email" required=""
                            autocomplete="off" ,
                            value="{{ form.email.data or '' }}">
                 </div>
                 <div class="login__box" class="login__regist1">
                     <i class='bx bx-phone login__icon'></i>
-                    <input type="text" placeholder="Phone" class="login__input" name="phone_number" id="phone_number"
+                    <input type="text" placeholder="010-1234-8958" class="login__input" name="phone_number" id="phone_number"
                            required="" autocomplete="off" ,
                            value="{{ form.phone_number.data or '' }}">
                 </div>
-                <input type="submit" value="Sign Up">
+                <input type="submit" value="회원가입">
 
             </div>
         </form>
