--- a/pybo/static/css/module.css
+++ b/pybo/static/css/module.css
@@ -33,6 +33,7 @@
     cursor: pointer;
     text-align: center;
     margin-left: 5px;
+    margin-bottom: 3px;
 }
 
 /* 모듈 아이콘 내의 FontAwesome 아이콘 스타일 */
@@ -48,7 +49,7 @@
     width: 400px;
     background-color: white;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 30px;
     position: fixed;
     bottom: 90px; /* 하단에서 아이콘과의 간격 조정 */
     right: 20px;
@@ -63,7 +64,8 @@
   margin-bottom: 20px;
 }
 p.user{
-    float:right;
+    display: flex;
+    flex-direction: row-reverse;
 }
 p.chatbot {
     float: left;
@@ -75,6 +77,9 @@ p.chatbot {
   padding: 20px;
   margin-bottom: 20px;
   box-sizing: border-box;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .chatbot-input {
@@ -82,6 +87,8 @@ p.chatbot {
   display: flex;
   justify-content: space-between;
   align-items: center;
+    border-radius: 20px;
+    margin-bottom: 10px;
 }
 
 .chatbot-input input {
@@ -142,7 +149,7 @@ p.chatbot {
     font-weight: 600;
     margin-bottom: 20px;
     }
-    
+
     .c-content input,
     .c-content textarea {
     width: 100%;
@@ -151,7 +158,7 @@ p.chatbot {
     margin-bottom: 20px;
     resize: none;
     }
-    
+
     .c-dalle-submit,
     #downloadBtn,
     #backBtn {
@@ -164,37 +171,38 @@ p.chatbot {
     cursor: pointer;
     margin-bottom: 10px;
     }
-    
+
     #displayedImage {
     display: block;
     max-width: 100%;
     height: auto;
     margin: 0 auto;
     }
-    
+
     .module-content::-webkit-scrollbar {
     width: 10px;
     }
-    
+
     .module-content::-webkit-scrollbar-thumb {
     background-color: #ccc;
     border-radius: 5px;
     }
-    
+
     .module-content::-webkit-scrollbar-track {
     background-color: #f1f1f1;
     border-radius: 5px;
     }
-    
+
     /* 모듈 메뉴 스타일 */
     .module-menu {
     position: relative;
     }
-    
+
     .module-icons {
     display: none;
     position: absolute;
     bottom: 70px;
     right: 0;
     flex-direction: column;
+        margin-bottom: 5px;
     }
