--- a/pybo/templates/friends/find_friends.html
+++ b/pybo/templates/friends/find_friends.html
@@ -15,10 +15,18 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.4.5.0.min.css')}}">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!--    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>-->
+    <!-- 성동형님 추가 js 및 css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/module.css') }}">
+
+    <script src="//cdn.ckeditor.com/4.21.0/full/ckeditor.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 
 </head>
 <body>
-
 <div class="han_nav">
     <nav class="navbar navbar-expand-lg navbar-light hello">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -39,9 +47,23 @@
                     <ul>
                         <li class="nav-item ">
                             <a class="nav-link" href="{{ url_for('main.logout') }}">{{ g.user.user_name }} 님(로그아웃)</a>
+                            <hr>
                         </li>
                         <li><a href="/question/list">Blog</a></li>
                         <li><a href="/input">Map</a></li>
+                        <li class="nav-item dropdown">
+                            <b class="nav-link1" id="notifications-dropdown" href="#" role="button"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                                <i class="fa fa-bell" id="notifications-icon"></i>
+                                <span class="badge badge-danger" id="unread-notifications-count"
+                                      style="display: none;"></span>
+                            </b>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="notifications-dropdown"
+                                 id="notifications-dropdown-menu">
+                                <div id="notifications-placeholder">로딩 중...</div>
+                            </div>
+                        </li>
                     </ul>
                     {% else %}
                     <ul>
@@ -66,39 +88,94 @@
     <div id="searchResults" class="row">
         <!-- 검색 결과가 여기에 동적으로 표시됩니다. -->
     </div>
-
     <!-- 나중에 알고리즘을 넣어서, 예를들어서 나랑 관심사 혹은 여행간 곳이 비슷한 사람을 우선배치 하는 알고리즘을 넣으면 재밌을것같음. -->
     <h3 class="my-4">친구 목록</h3>
     <ul class="list-group">
         {% for friend in users %} <!--사인업디비에있는 모든 유저에 대해서 하나하나 friend로 가져옴-->
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                <div class="friend-info">
-                    {% if friend.profile_img %}
-                        <img id="profileImg"
-                             src="{{ url_for('static', filename='image/profile/' + friend.user_id + '/' + friend.profile_img if g.user.profile_img else 'image/User.png') }}"
-                             style="border-radius: 50%; width: 130px; height: 130px;" />
-                    {% else %}
-                        <img data-url="/bz17854" class="usr_img" style="border-radius: 50%; width: 130px; height: 130px;" alt="작성자 프로필 이미지" src="{{ url_for('static', filename='image/User.png') }}">
-                    {% endif %}
-                    <span class="friend-name">{{ friend.user_name }}</span>
-                    <span class="friend.user_id">{{ friend.user_id }}</span>
-                    <span class="friend-phone">{{ friend.phone }}</span>
-                </div>
-                <div class="friend-actions"> <!--friends/follow엔드포인트로 주는 걸 .id인 인티저로 넘김12,11같이-->
-                    <form action="{{ url_for('friends.follow', user_id=friend.id) }}" method="post" class="d-inline">
-                        <input type="submit" value="팔로우" class="btn btn-primary">
-                    </form>
-                    {% if friend in g.user.friends %}
-                    <form action="{{ url_for('friends.unfollow', user_id=friend.id) }}" method="post" class="d-inline">
-                        <input type="submit" value="언팔로우" class="btn btn-danger">
-                    </form>
-                    {% endif %}
-                </div>
-            </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div class="friend-info">
+                {% if friend.profile_img %}
+                <img class="usr_img" id="profileImg"
+                     src="{{ url_for('static', filename='image/profile/' + friend.user_id + '/' + friend.profile_img) }}"
+                     style="border-radius: 50%; width: 130px; height: 130px;" />
+                {% else %}
+                <img data-url="/bz17854" class="usr_img" style="border-radius: 50%; width: 130px; height: 130px;" alt="작성자 프로필 이미지" src="{{ url_for('static', filename='image/User.png') }}">
+                {% endif %}
+                <span class="friend-name">{{ friend.user_name }}</span>
+                <span class="friend.user_id">{{ friend.user_id }}</span>
+                <span class="friend-phone">{{ friend.phone }}</span>
+            </div>
+            <div class="friend-actions"> <!—friends/follow엔드포인트로 주는 걸 .id인 인티저로 넘김12,11같이—>
+                <form action="{{ url_for('friends.follow', user_id=friend.id) }}" method="post" class="d-inline">
+                    <input type="submit" value="팔로우" class="btn btn-primary">
+                </form>
+
+                {% if friend in g.user.friends %}
+                <form action="{{ url_for('friends.unfollow', user_id=friend.id) }}" method="post" class="d-inline">
+                    <input type="submit" value="언팔로우" class="btn btn-danger">
+                </form>
+                {% endif %}
+            </div>
+        </li>
         {% endfor %}
     </ul>
 </div>
+
 {% block script %}
+<div class="module">
+    <!-- 모듈 -->
+    <!--DALL-E와 관련된 https://platform.openai.com/docs/guides/images/introduction-->
+    <div class="module-icon module-menu">
+        <i class="fas fa-th-large fa-fw"></i>
+    </div>
+    <div class="module-icons" style="display: none;">
+        <!-- 모듈 챗봇 아이콘 -->
+        <div class="module-icon chatbot-icon">
+            <i class="fas fa-comment-alt fa-fw"></i>
+        </div>
+        <!-- 모듈 이미지 마스크 제너레이터 아이콘 -->
+        <div class="module-icon image-generator-icon">
+            <i class="fas fa-image fa-fw"></i>
+        </div>
+        <!-- 모듈 프롬프트 이미지 제너레이터 -->
+        <div class="module-icon c-icon">
+            <i class="fas fa-cog fa-fw"></i>
+        </div>
+    </div>
+    <!-- 챗봇 content -->
+    <div class="module-content chatbot-content">
+        <h3>챗봇</h3>
+        <div class="chatbot-messages">
+            <!-- 이 div에 메시지가 추가됩니다. -->
+        </div>
+        <input type="text" class="form-control chatbot-input" placeholder="여기에 텍스트를 입력하세요...">
+        <button class="btn btn-primary chatbot-submit">제출</button>
+    </div>
+
+    <!-- DALL-E content -->
+    <div class="module-content image-generator-content">
+        <h3>이미지 생성기</h3>
+        <label for="image1">마스킹 하고 싶은 이미지 원본을 업로드해주세요</label>
+        <input type="file" class="form-control-file image1-input" id="image1" accept="image/*">
+        <label for="image2">마스킹 이미지가 들어갑니다</label>
+        <input type="file" class="form-control-file image2-input" id="image2" accept="image/*">
+        <textarea class="form-control prompt-input" id="prompt" rows="3" placeholder="여기에 프롬프트를 입력하세요"></textarea>
+        <button class="btn btn-primary masking-button">마스킹</button>
+        <button class="btn btn-primary dalle-submit" style="display:none;">제출</button>
+    </div>
+
+    <div class="module-content c-content" style="display:none;">
+        <h3>이미지 생성기</h3>
+        <input type="text" class="form-control c-dalle-input" placeholder="영어로 텍스트를 입력해주세요">
+        <button class="btn btn-primary c-dalle-submit">제출</button>
+        <img id="displayedImage" style="display:none; width: 512px; height: 512px;"> <!-- 이미지 크기 수정 -->
+        <a class="btn btn-primary" id="downloadBtn" style="display:none;">다운로드</a> <!-- 다운로드 버튼을 <a> 태그로 수정 -->
+        <button class="btn btn-primary" id="backBtn" style="display:none;">돌아가기</button> <!-- 돌아가기 버튼 추가 -->
+    </div>
+
+    <!-- 챗봇 JavaScript 코드 -->
+    <script src="{{ url_for('static', filename='js/module.js') }}" defer></script>
+</div>
 <style>
     .container {
         margin-top: 6%;
@@ -106,51 +183,139 @@
 </style>
 <script>
     document.querySelector('.btn-outline-secondary').addEventListener('click', async () => {
-    const searchInput = document.getElementById('searchInput');
-    const searchResults = document.getElementById('searchResults');
-    const searchQuery = searchInput.value.trim();
+        const searchInput = document.getElementById('searchInput');
+        const searchResults = document.getElementById('searchResults');
+        const searchQuery = searchInput.value.trim();
 
-    if (searchQuery) {
-        try {
-            const response = await fetch(`/friends/search?search_query=${encodeURIComponent(searchQuery)}`);
-            const results = await response.json();
+        if (searchQuery) {
+            try {
+                const response = await fetch(`/friends/search?search_query=${encodeURIComponent(searchQuery)}`);
+                const results = await response.json();
 
-            searchResults.innerHTML = '';
+                searchResults.innerHTML = '';
 
-            results.forEach(user => {
-                const userElement = document.createElement('div');
-                userElement.className = 'col-12 col-md-6 col-lg-4 mb-3';
-                userElement.innerHTML = `
-                    <div class="card">
+                results.forEach(user => {
+                    const userElement = document.createElement('div');
+                    userElement.className = 'col-12 col-md-6 col-lg-4 mb-3';
+                    const profileImgSrc = user.profile_img ? `/static/image/profile/${user.user_id}/${user.profile_img}` : '/static/image/User.png';
+                    userElement.innerHTML = `
+                    <div class="card text-center">
                      <img id="profileImg"
-                             src="{{ url_for('static', filename='image/profile/' + friend.user_id + '/' + friend.profile_img if g.user.profile_img else 'image/User.png') }}"
-                             style="border-radius: 50%; width: 130px; height: 130px;" />
-                        <div class="card-body">
-                            <h5 class="card-title">${user.user_name} (${user.user_id})</h5>
+                             src="${profileImgSrc}"
+                             style="border-radius: 50%; width: 130px; height: 130px; margin: auto;" />
+                        <div class="card-body"
+                            <h5 class="card-title">${user.user_name}</h5>
+                            <h5 class="card-title">${user.user_id}</h5>
                             <p class="card-text">${user.phone}</p>
                             {% if g.user is not none %}
                             <form action="/friends/follow/${user.id}" method="post">
                                 <input type="submit" value="팔로우" class="btn btn-primary">
                             </form>
-                            {% if users.id in g.user.friend_ids %}
+                               {% if user in g.user.users %}
                             <form action="/friends/unfollow/${user.id}" method="post">
                                 <input type="submit" value="언팔로우" class="btn btn-danger">
                             </form>
-                            {% endif %}
+                {% endif %}
+
                             {% endif %}
                         </div>
                     </div>
                 `;
 
-                searchResults.appendChild(userElement);
-            });
-        } catch (error) {
-            console.error('Error fetching search results:', error);
+                    searchResults.appendChild(userElement);
+                });
+            } catch (error) {
+                console.error('Error fetching search results:', error);
+            }
         }
-    }
-});
+    });
 </script>
 <script src="{{ url_for('static', filename='js/bar.js') }}"></script>
+<script>
+    async function fetchFollowNotifications() {
+        const response = await fetch('/friends/get_follow_notifications');
+        const notifications = await response.json();
+        return notifications;
+    }
+
+    async function displayFollowNotifications() {
+        const notifications = await fetchFollowNotifications();
+        const notificationsDropdownMenu = document.getElementById("notifications-dropdown-menu");
+        const unreadNotificationsCount = document.getElementById("unread-notifications-count");
+
+        // 알림 목록 초기화
+        notificationsDropdownMenu.innerHTML = '';
+
+        // 안 읽은 알림 개수 초기화
+        let count = 0;
+
+        notifications.forEach(notification => {
+            // 새로운 알림 항목 생성
+            const notificationItem = document.createElement("a");
+            notificationItem.classList.add("dropdown-item");
+            notificationItem.setAttribute("href", "#");
+
+            // 알림 텍스트 설정
+            notificationItem.textContent = `${notification.sender_name}님이 팔로우하였습니다.`;
+
+            // 안 읽은 알림 처리
+            if (!notification.is_read) {
+                notificationItem.classList.add("unread");
+                count++;
+            }
+
+            // 알림 목록에 추가
+            notificationsDropdownMenu.appendChild(notificationItem);
+        });
+
+        // 안 읽은 알림 개수 업데이트
+        unreadNotificationsCount.textContent = count;
+
+        // 종 모양 아이콘에 빨간 점 표시
+        if (count > 0) {
+            document.getElementById("notifications-icon").classList.add("has-unread");
+        } else {
+            document.getElementById("notifications-icon").classList.remove("has-unread");
+        }
+    }
+
+    // 알림 드롭다운 메뉴 초기 상태 설정
+    const notificationsDropdownMenu = document.getElementById("notifications-dropdown-menu");
+    notificationsDropdownMenu.style.display = 'none';
+
+    // 클릭 이벤트 리스너 추가
+    document.getElementById("notifications-dropdown").addEventListener("click", function () {
+        if (notificationsDropdownMenu.style.display === 'none') {
+            notificationsDropdownMenu.style.display = 'block';
+        } else {
+            notificationsDropdownMenu.style.display = 'none';
+        }
+    });
+
+    // 페이지 로드 시 알림 데이터 가져오기
+    document.addEventListener("DOMContentLoaded", displayFollowNotifications);
+</script>
+<script>
+    document.getElementById("searchInput").addEventListener("keyup", function(event) {
+        event.preventDefault();
+        if (event.keyCode === 13) {
+            search();
+        }
+    });
+
+    // 검색 버튼 클릭 시 검색 실행
+    document.querySelector(".btn-outline-secondary").addEventListener("click", search);
+
+    // 검색 기능 함수
+    function search() {
+        var searchInput = document.getElementById("searchInput").value; // 검색 입력란의 값 가져오기
+        // 여기에 검색에 대한 로직을 추가하고 결과를 동적으로 표시하는 코드를 작성합니다.
+        // 예시: 검색 결과를 searchResults라는 id를 가진 엘리먼트에 동적으로 추가한다고 가정하면 아래와 같이 작성할 수 있습니다.
+        var searchResults = document.getElementById("searchResults");
+        // 검색 결과를 추가하는 로직 작성
+        // searchResults.innerHTML = "검색 결과 표시"; // 예시: 간단한 텍스트로 표시하는 경우
+    }
+</script>
 </body>
 </html>
 {% endblock %}
