--- a/pybo/templates/main.html
+++ b/pybo/templates/main.html
@@ -11,7 +11,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/aos.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/swiper.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!--    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>-->
+    <!-- 성동형님 추가 js 및 css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/module.css') }}">
 
+    <script src="//cdn.ckeditor.com/4.21.0/full/ckeditor.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 
     <script src="{{ url_for('static', filename='js/jquery-1.11.3.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/iscroll.js') }}"></script>
@@ -78,15 +86,15 @@
                                     여행기록을 <br class="mo_block">블로그에 남겨보아요<br>
                                 </p>
                                 <div class="slider_radius">
-                                    <img class="slide img" src="{{ url_for('static', filename='image/1.png') }}" alt="slide 3">
+                                    <img class="slide img1" src="{{ url_for('static', filename='image/1.jpg') }}" alt="slide 3">
                                 </div>
                             </div>
                             <div class="slider_item swiper-slide swiper-slide-duplicate-next"
                                  data-swiper-slide-index="0" style="width: 310px;">
                                 <div class="changethis">
-                                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">블로그</h2>
+                                <h1 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Blog</h1>
                                 <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-                                    여행블로그인 트레블로그에  <br class="mo_block">기록을 남겨보세요<br>
+                                    여러분의 소중한 여행 기록이 <br class="mo_block">다른 사람에게 새로운 여행 계획이 될 수 있습니다<br>
                                 </p>
                                 <ul class="block">
                                     <li class="list_1">
@@ -99,91 +107,94 @@
                                     <li>
                                         <div class="feature2">
                                             <p>
-                                                친구들과 함께 블로그에 여행기록을 작성해보세요
+                                                사람들의 계획을 보고 함께 블로그에 여행기록을 작성해보세요
                                             </p>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="feature3">
                                             <p>
-                                                블로그 특징3
+                                                여행 계획에 대한 이야기를 나누며, 서로의 경험에 공감하고 함께 성장합니다
                                             </p>
                                         </div>
                                     </li>
                                 </ul>
                                 </div>
                                 <div class="slider_radius">
-                                    <img class="slide img" src="{{ url_for('static', filename='image/2.png') }}" alt="slide 1">
+                                    <img class="slide img" src="{{ url_for('static', filename='image/1.jpg') }}" alt="slide 1"
+                                    width="350px" height="350px">
                                 </div>
                             </div>
                             <div class="slider_item swiper-slide swiper-slide-prev" data-swiper-slide-index="1"
                                  style="width: 310px;">
                                 <div class="changethis">
-                                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Map</h2>
+                                <h1 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Map</h1>
                                 <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-                                    지도를 활용해서<br class="mo_block">나만의 지도를 만들어 보세요<br>
+                                    지도와 마커를 사용해서<br class="mo_block"> 나만의 지도를 만들어 보세요<br>
                                 </p>
                                     <ul class="block">
                                         <li class="list_2">
                                             <div class="feature1">
                                                 <p>
-                                                    여행 블로그에 최적화된 Travel-log
+                                                    마커를 클릭하면 해당 장소에 대한 상세한 정보와 여행 경험을 공유할 수 있습니다.
                                                 </p>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="feature2">
                                                 <p>
-                                                    친구들과 함께 블로그에 여행기록을 작성해보세요
+                                                    지도 위에 실시간으로 위치를 표시하여 여행 중인 모습을 공유하고, 사용자들이 여행의 흐름을 파악할 수 있습니다
                                                 </p>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="feature3">
                                                 <p>
-                                                    블로그 특징3
+                                                    여행지에 대한 자세한 정보를 제공하여 사용자들이 여행지를 공유하고 계획할 수 있습니다
                                                 </p>
                                             </div>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="slider_radius">
-                                    <img class="slide img" src="{{ url_for('static', filename='image/3.png') }}" alt="slide 2">
+                                    <img class="slide img" src="{{ url_for('static', filename='image/2.png') }}"  alt="slide 2">
                                 </div>
                             </div>
                             <div class="slider_item swiper-slide swiper-slide-active" data-swiper-slide-index="2"
-                                 style="width: 310px;">
+                                 style="width: 360px;">
                                 <div class="changethis">
-                                <h2 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Chat Gpt</h2>
+                                <h1 class="sec_tit aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">Chat Gpt</h1>
                                 <p class="sec_desc aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-                                    Chat Gpt를 활용해서<br class="mo_block">인공지능 서비스를 사용해보세요<br>
+                                    Chat Gpt를 활용해서 <br class="mo_block">요약, 이미지 생성, 마스킹, 여행 추천기능을 제공합니다.<br>
                                 </p>
                                     <ul class="block">
                                         <li class="list_3">
                                             <div class="feature1">
                                                 <p>
-                                                    여행 블로그에 최적화된 Travel-log
+                                                    Gpt를 활용해서 긴 여행 글을 간결하게 요약하여 사용자들에게 제공합니다
                                                 </p>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="feature2">
                                                 <p>
-                                                    친구들과 함께 블로그에 여행기록을 작성해보세요
-                                                </p>
+                                                    Gpt를 활용하여 사용자의 취향과 관심사에 기반한 맞춤형 여행 추천을 제공합니다
+                                                 </p>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="feature3">
                                                 <p>
-                                                    블로그 특징3
+                                                    Gpt를 활용하여 이미지 생성하고 독특한 여행 이미지를 제공하고, 마스킹 기능을 통해 자신의 취향에 맞게 재미있고 흥미로운 이미지를 편집해보세요
+
+                                                </p>
                                                 </p>
                                             </div>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="slider_radius">
-                                    <img class="slide img" src="{{ url_for('static', filename='image/1.png') }}" alt="slide 3">
+                                    <img class="slide img" src="{{ url_for('static', filename='image/3.jpg') }}" alt="slide 3">
                                 </div>
                             </div>
                             <div class="slider_item swiper-slide swiper-slide-duplicate swiper-slide-next"
@@ -251,13 +262,13 @@
                                 <a href="" class="btn_anchor">자세히보기</a>
                             </div>
                         </div>
-                        <div class="service_item swiper-slide">
-                            <div class="service_box">
-                                <strong class="sv_tit">추가기능</strong>
-                                <p class="sv_cont">추가기능</p>
-                                <button type="button" class="btn_anchor" disabled="">준비중</button>
-                            </div>
-                        </div>
+<!--                        <div class="service_item swiper-slide">-->
+<!--                            <div class="service_box">-->
+<!--                                <strong class="sv_tit">추가기능</strong>-->
+<!--                                <p class="sv_cont">추가기능</p>-->
+<!--                                <button type="button" class="btn_anchor" disabled="">준비중</button>-->
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
 
                     <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"><span
@@ -290,7 +301,8 @@
             </div>
             <div class="right_box">
                 <div class="image_area aos-init aos-animate" data-aos="fade-left" data-aos-duration="1000">
-                    <img src="{{ url_for('static', filename='image/morkupimage2.png') }}">
+                    <img class="session_4" src="{{ url_for('static', filename='image/morkupimage2.png') }}"
+                    width="80%" height="80%">
                 </div>
             </div>
         </div>
@@ -319,18 +331,18 @@
         <div class="sec_inner sec_inner&#45;&#45;1st">
             <div class="left_box">
                 <div class="text_area">
-                    <h2 class="sec_tit aos-init" data-aos="fade-up" data-aos-duration="1000">문구 추가<br>문구 추가</h2>
+                    <h2 class="sec_tit aos-init" data-aos="fade-up" data-aos-duration="1000">Gpt를 활용한<br>이미지 생성기</h2>
                     <p class="sec_desc aos-init" data-aos="fade-up" data-aos-duration="1000">
                       <br class="mo_block">
-                        <br>문구 추가
+                        Gpt를 사용해서 이미지를 만들어보세요
                     </p>
 
                 </div>
             </div>
             <div class="right_box">
                 <div class="image_area aos-init" data-aos="fade-left" data-aos-duration="1000">
-                    <img src="{{ url_for('static', filename='image/main_01.jpg') }}"
-                         width="850px" height="550px">
+                    <img src="{{ url_for('static', filename='image/main_04.jfif') }}"
+                         width="70%" height="70%">
                 </div>
             </div>
         </div>
@@ -338,15 +350,15 @@
             <div class="right_box">
                 <div class="text_area">
                     <h2 class="sec_tit aos-init" data-aos="fade-up" data-aos-duration="1000">
-                        문구 추가 <br><br class="mo_block">문구 추가<br class="pc_block">
+                        Gpt를 활용한<br><br class="mo_block">이미지 마스킹 기능<br class="pc_block">
                     </h2>
-                    <p class="sec_desc aos-init" data-aos="fade-up" data-aos-duration="1000">문구 추가 <br>문구 추가</p>
+                    <p class="sec_desc aos-init" data-aos="fade-up" data-aos-duration="1000">Gpt를 사용해서 <br>트레블로그에서 이미지 마스킹을 할 수 있습니다</p>
                 </div>
             </div>
             <div class="left_box aos-init" data-aos="fade-right" data-aos-duration="1000">
                 <div class="image_area">
-                    <img src="{{ url_for('static', filename='image/main_01.jpg') }}"
-                         width="550" height="750px">
+                    <img src="{{ url_for('static', filename='image/main_05.jfif') }}"
+                         width="70%" height="70%">
                 </div>
                 <span class="tip_box">
            <span class="tip_text">
@@ -368,11 +380,13 @@
         </section>
     </div>
 </div>
+
 <!-- //container -->
 <!--//footer-->
 </div>
 <!-- //wrap -->
 </div>
+
 <!-- //agreePop -->
 </body>
 
